# bevy-text-edit

./: .gitattributes  .gitignore  .gitlab-ci.yml  .rustfmt.toml  CHANGELOG  Cargo.toml  LICENSE  LICENSE-APACHE  LICENSE-MIT  README.md
.cargo/: config.toml
.github/: FUNDING.yml
.zed/: settings.json
examples/: basic.rs  custom_virtual_keyboard.rs  get_text.rs  no_state.rs  number_input.rs
src/: lib.rs  virtual_keyboard.rs
src/experimental/: mod.rs  number_input.rs
tests/: tests.rs
