[package]
name = "bevy_text_edit"
version = "0.6.0"
authors = ["Trung Do <dothanhtrung@pm.me>"]
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://gitlab.com/kimtinh/bevy-text-edit"
keywords = ["bevy"]
description = "Bevy plugin for input text"
exclude = ["assets", "examples", "tests", ".cargo"]
categories = ["game-development"]

[dependencies]
bevy = { version = "0.16.0-rc.3", features = ["bevy_text", "bevy_ui", "bevy_color", "bevy_gilrs", "bevy_window", "bevy_state"], default-features = false }
regex-lite = { version = "0.1" }
bevy_support_misc = { version = "0.4", default-features = false, git = "https://gitlab.com/kimtinh/bevy-support-misc.git", branch = "dev" }

[dev-dependencies]
bevy = { version = "0.16.0-rc.3" }

[features]
default = []
experimental = []
