[package]
name = "bevy_text_edit"
version = "0.6.1"
authors = ["Trung Do <dothanhtrung@pm.me>"]
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://gitlab.com/kimtinh/bevy-text-edit"
keywords = ["bevy"]
description = "Bevy plugin for input text"
exclude = ["assets", "examples", "tests", ".cargo"]
categories = ["game-development"]

[dependencies]
bevy = { version = "0.16", features = ["bevy_text", "bevy_ui", "bevy_color", "bevy_gilrs", "bevy_window", "bevy_state", "bevy_picking"], default-features = false }
regex-lite = { version = "0.1" }
bevy_support_misc = { version = "0.4", default-features = false }
bevy_auto_timer = "0.1"

[dev-dependencies]
bevy = { version = "0.16" }

[features]
default = []
experimental = []
